<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Geoquiz app- term 2 - v.1</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect! :( </string>
    <string name="next_text">Next</string>
    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
    <string name="previous_text">Previous</string>
    <string name="question_already_answered">"Question Already Answered :("</string>
    <string name="result_text">Quiz Complete!</string>
    <!--
NOTE TO SELF:
    Add eyebrow emoji to string below
-->
    <string name="warning_text">Are you sure you want to do this? </string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast" tools:ignore="Typos">Cheating is wrong tssk tssk </string>

</resources>